# energy-metic-service

./: .gitmodules  CONTRIBUTING.md  README.md  readme_integration.md  readme_porting.md
docs/: ade9178_example_doxy_config  ade9178_example_doxy_introduction.h  ade9178_example_doxy_layout.xml
docs/release_notes/: 1.1.0.md  index.md
eval_firmware/: readme.md
eval_firmware/include/: cli_commands.h  cli_service_interface.h  dispatch_table.h  error_display.h  example_version.h  metic_config_groups.h  metic_example.h  nvm_service_interface.h
eval_firmware/project/: CMakeLists.txt  CMakePresets.json  cli_firmware.code-workspace  readme.md
eval_firmware/project/config/: app_cfg.h
eval_firmware/source/: cli_service_interface.c  error_display.c  example_display.c  main.c  metic_config_groups.c  metic_example.c  metic_example_freertos.c  metic_service_max3267x.c  metic_service_no_os_interface.c  nvm_reg.c  nvm_service_interface.c
example/: readme.md  readme_porting.md
example/include/: cli_commands.h  cli_service_interface.h  dispatch_table.h  example_display.h  example_version.h  metic_example.h  nvm_service_interface.h  pulse_count.h  status.h
example/include/config/: app_cfg.h
example/include/interface/: metic_hal.h
example/project/: CMakeLists.txt  CMakePresets.json  readme.md
example/simple_example/: CMakeLists.txt  readme.md  simple_example_noos.c
example/simple_example/config/: app_cfg.h
example/source/: cli_commands.c  cli_service_interface.c  example_display.c  main.c  metic_example.c  metic_service_freertos_interface.c  nvm_reg.c  nvm_service_interface.c  pulse_count.c
example/source/interface/: metic_service_adapter.c  metic_service_init_interface.c  metic_service_run_interface.c
examples/: metic_example_noos.c  readme.md
examples/projects/: CMakeLists.txt  metic_example.code-workspace
examples/projects/config/: app_cfg.h
include/: adi_metic.h  adi_metic_memory.h  adi_metic_private.h  adi_metic_status.h  metic_output_groups.h
interface/include/: metic_service_interface.h
interface/source/: metic_service_adapter.c  metic_service_run_interface.c
source/: CMakeLists.txt  adi_metic.c  adi_metic_convert.c  adi_metic_wfs_receive.c  metic_output_groups.c  metic_scomm_91xx_private.c
